# AV-Gaussian-Workflow

./: .gitmodules  IMU_EXTRACTION_GUIDE.md  README.md  colmap_sfm_fisheye.py  colmap_sfm_fisheye.sh  colmap_sfm_pinhole.py  colmap_sfm_pinhole.sh  colmap_sfm_skybox.py  config.py  copy_odd_frames.py  demo_insv_mp4_pairing.py  downsample_images.py  extract_360video.py  extract_360video_imu.py  imu_extractor.py  make_matterport_masks.py  pyproject.toml  results.md  run_3dgrut_eval.py  run_3dgrut_train.py  split_video_tracks.sh  test_imu_extraction.py
.cursor/rules/: defaults.mdc
masks/matterport/: bottom_mask.png~  other_mask.png~  top_mask.png~
