[project]
name = "av-gaussian-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "tqdm>=4.67.1",
    "numpy>=1.24.0",
    "gsplat>=1.5.3",
    "torch>=2.8.0",
    "pycolmap>=3.12.5",
    "pytest>=8.4.2",
    "nerfacc>=0.5.3",
    "imageio>=2.37.0",
    "tyro>=0.9.31",
    "viser>=1.0.8",
]

[tool.uv.extra-build-dependencies]
git = ["torch"]
